# exfetch

./: Cargo.toml  LICENSE  README.md  build.bat  build.sh
src/: lib.rs  main.rs  readout.rs  traits.rs
src/linux/: cpu.rs  memory.rs  mod.rs  os.rs  pkg.rs  uptime.rs
src/unix/: init.rs  mod.rs  shell.rs
